--- a/mediapipe/graphs/pose_detection/BUILD
+++ b/mediapipe/graphs/pose_detection/BUILD
@@ -20,11 +20,13 @@ cc_library(
     name = "mobile_calculators",
     deps = [
         "//mediapipe/calculators/core:flow_limiter_calculator",
+        "//mediapipe/calculators/image:color_correction_gpu_calculator",
         "//mediapipe/calculators/image:image_transformation_calculator",
+        "//mediapipe/calculators/image:luminance_calculator",
+        "//mediapipe/calculators/tflite:posenet_tensors_to_detections_calculator",
         "//mediapipe/calculators/tflite:ssd_anchors_calculator",
         "//mediapipe/calculators/tflite:tflite_converter_calculator",
         "//mediapipe/calculators/tflite:tflite_inference_calculator",
-        "//mediapipe/calculators/tflite:posenet_tensors_to_detections_calculator",
         "//mediapipe/calculators/util:annotation_overlay_calculator",
         "//mediapipe/calculators/util:detection_label_id_to_text_calculator",
         "//mediapipe/calculators/util:detection_letterbox_removal_calculator",
