A workable version of pose-net in cpu, with all keypoints plot. The logs need to be cleaned.

--- a/mediapipe/graphs/pose_detection/BUILD
+++ b/mediapipe/graphs/pose_detection/BUILD
@@ -48,3 +48,10 @@ mediapipe_binary_graph(
     output_name = "mobile_gpu.binarypb",
     deps = [":mobile_calculators"],
 )
+
+mediapipe_binary_graph(
+    name = "mobile_cpu_binary_graph",
+    graph = "pose_detection_mobile_cpu.pbtxt",
+    output_name = "mobile_cpu.binarypb",
+    deps = [":mobile_calculators"],
+)
